@@ -83,6 +83,8 @@ task addSource {
 
 tasks.compileGwt.dependsOn(addSource)
 tasks.draftCompileGwt.dependsOn(addSource)
+tasks.checkGwt.dependsOn(addSource)
+checkGwt.war = file("war")
 
 sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
